k8s/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: mario-service
spec:
  selector:
    app: mario
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
